# usbforge

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/usbforge-cli/: Cargo.toml
crates/usbforge-cli/src/: main.rs
crates/usbforge-core/: Cargo.toml
crates/usbforge-core/resources/: README.md
crates/usbforge-core/src/: device.rs  disk.rs  error.rs  filesystem.rs  format.rs  hash.rs  image.rs  iso.rs  iso9660.rs  iso_stub.rs  layout.rs  lib.rs  net.rs  report.rs  testutil.rs  uefi_ntfs.rs  write.rs
crates/usbforge-gui/: Cargo.toml
crates/usbforge-gui/src/: main.rs
crates/usbforge-gui/ui/: app.slint
crates/usbforge-platform/: Cargo.toml
crates/usbforge-platform/src/: lib.rs  unsupported.rs
crates/usbforge-platform/src/linux/: block.rs  mod.rs  sysfs.rs
crates/usbforge-platform/src/windows/: block.rs  enumerate.rs  mod.rs
docs/: WORK-SPLIT.md
