[workspace]
resolver = "2"
members = [
    "crates/usbforge-core",
    "crates/usbforge-platform",
    "crates/usbforge-cli",
    "crates/usbforge-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "GPL-3.0-or-later"
authors = ["USBForge contributors"]
repository = ""
description = "Cross-platform bootable USB / disk image writer (a Rust reimagining of Rufus)"

[workspace.dependencies]
usbforge-core = { path = "crates/usbforge-core" }
usbforge-platform = { path = "crates/usbforge-platform" }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"

[profile.release]
lto = "thin"
strip = true
