[package]
name = "usbforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Platform-agnostic core for USBForge: domain types, traits (HAL), hashing, reporting."

[dependencies]
thiserror.workspace = true
sha2.workspace = true
sha1.workspace = true
md-5.workspace = true
hex.workspace = true
