[package]
name = "usbforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Platform-agnostic core for USBForge: domain types, traits (HAL), hashing, reporting."

[dependencies]
thiserror.workspace = true
sha2.workspace = true
sha1.workspace = true
md-5.workspace = true
hex.workspace = true
# Partition tables (GPT) and FAT formatting — pure-Rust, cross-platform.
gpt = "4.1.0"
fatfs = { version = "0.3.6", default-features = false, features = ["std", "alloc"] }
ureq = "2"

# ISO9660 reading. cdfs pulls `fuser` (a Unix-only FUSE crate) unconditionally,
# so it can't build on Windows — gate it to Unix. On other targets the `iso`
# module falls back to a stub (see iso_stub.rs / lib.rs).
[target.'cfg(unix)'.dependencies]
cdfs = "0.2.3"
