[package]
name = "usbforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Platform-agnostic core for USBForge: domain types, traits (HAL), hashing, reporting."

[dependencies]
thiserror.workspace = true
sha2.workspace = true
sha1.workspace = true
md-5.workspace = true
hex.workspace = true
# Partition tables (GPT) and FAT formatting — pure-Rust, cross-platform.
gpt = "4.1.0"
fatfs = { version = "0.3.6", default-features = false, features = ["std", "alloc"] }
# ISO9660 reading is our own pure-Rust reader (src/iso9660.rs) — no external
# crate, so the `iso` module is cross-platform (no cdfs/fuser).
