[package]
name = "usbforge-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Graphical frontend for USBForge (placeholder; GUI toolkit wired up in a later milestone)."

[[bin]]
name = "usbforge-gui"
path = "src/main.rs"

[dependencies]
rfd = "0.17.2"
slint = "1.12.1"
usbforge-core.workspace = true
usbforge-platform.workspace = true

[build-dependencies]
slint-build = "1.12.1"
