[package]
name = "usbforge-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Per-OS backends implementing usbforge-core traits (Linux: sysfs/ioctl; Windows: SetupAPI/DeviceIoControl)."

[dependencies]
usbforge-core.workspace = true

# Windows backend deps land here behind a target gate when implemented, e.g.:
# [target.'cfg(windows)'.dependencies]
# windows = { version = "0.58", features = ["Win32_Storage_FileSystem", "Win32_System_Ioctl"] }
