[package]
name = "usbforge-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Per-OS backends implementing usbforge-core traits (Linux: sysfs/ioctl; Windows: SetupAPI/DeviceIoControl)."

[dependencies]
usbforge-core.workspace = true

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
] }
